--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -363,6 +363,7 @@ en:
     team_found: Team not found.
     invalid: Invitation token is invalid.
     no_invitation: No invitation exists for team %{name}
+    invitation_accepted: Invitation already accepted
   error_user_is_not_a_team_member: Sorry, you can only assign to members of this team
   error_login_with_exists_account: Sorry, there is another user who is already using
     this account
