--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -694,6 +694,7 @@ ar:
   custom_message_smooch_bot_meme_africa-check: ''
   custom_message_smooch_bot_ask_for_tos_africa-check: ''
   custom_message_smooch_bot_result_boom-factcheck: ''
+  custom_message_smooch_bot_result_changed_boom-factcheck: ''
   custom_message_smooch_bot_ask_for_confirmation_boom-factcheck: ''
   custom_message_smooch_bot_message_confirmed_boom-factcheck: ''
   custom_message_smooch_bot_message_type_unsupported_boom-factcheck: ''
@@ -710,6 +711,17 @@ ar:
   custom_message_smooch_bot_message_unconfirmed_caio-bot-garden-refactoring: شكراً
     لقد تجاهلت.
   custom_message_smooch_bot_disabled_caio: مع الأسف! ، هذا البوت معطل حاليا
+  custom_message_smooch_bot_result_check-message-demo: ''
+  custom_message_smooch_bot_result_changed_check-message-demo: ''
+  custom_message_smooch_bot_ask_for_confirmation_check-message-demo: ''
+  custom_message_smooch_bot_message_confirmed_check-message-demo: ''
+  custom_message_smooch_bot_message_type_unsupported_check-message-demo: ''
+  custom_message_smooch_bot_message_unconfirmed_check-message-demo: ''
+  custom_message_smooch_bot_not_final_check-message-demo: ''
+  custom_message_smooch_bot_meme_check-message-demo: ''
+  custom_message_smooch_bot_window_closing_check-message-demo: ''
+  custom_message_smooch_bot_disabled_check-message-demo: ''
+  custom_message_smooch_bot_ask_for_tos_check-message-demo: ''
   custom_message_smooch_bot_ask_for_confirmation_checkpoint: |-
     شكرا لإرسال هذه الرسالة.
 
@@ -741,6 +753,7 @@ ar:
     اﻹنتظار للمزيد من التحقق."
   custom_message_smooch_bot_ask_for_tos_checkpoint: ''
   custom_message_smooch_bot_result_india-today: ''
+  custom_message_smooch_bot_result_changed_india-today: ''
   custom_message_smooch_bot_ask_for_confirmation_india-today: ''
   custom_message_smooch_bot_message_confirmed_india-today: ''
   custom_message_smooch_bot_message_type_unsupported_india-today: ''
