--- a/config/locales/ml.yml
+++ b/config/locales/ml.yml
@@ -167,6 +167,7 @@ ml:
   custom_message_smooch_bot_meme_africa-check: ''
   custom_message_smooch_bot_ask_for_tos_africa-check: ''
   custom_message_smooch_bot_result_boom-factcheck: ''
+  custom_message_smooch_bot_result_changed_boom-factcheck: ''
   custom_message_smooch_bot_ask_for_confirmation_boom-factcheck: ''
   custom_message_smooch_bot_message_confirmed_boom-factcheck: ''
   custom_message_smooch_bot_message_type_unsupported_boom-factcheck: ''
@@ -180,6 +181,17 @@ ml:
   custom_message_smooch_bot_message_confirmed_caio-bot-garden-refactoring: ''
   custom_message_smooch_bot_message_unconfirmed_caio-bot-garden-refactoring: ''
   custom_message_smooch_bot_disabled_caio: ''
+  custom_message_smooch_bot_result_check-message-demo: ''
+  custom_message_smooch_bot_result_changed_check-message-demo: ''
+  custom_message_smooch_bot_ask_for_confirmation_check-message-demo: ''
+  custom_message_smooch_bot_message_confirmed_check-message-demo: ''
+  custom_message_smooch_bot_message_type_unsupported_check-message-demo: ''
+  custom_message_smooch_bot_message_unconfirmed_check-message-demo: ''
+  custom_message_smooch_bot_not_final_check-message-demo: ''
+  custom_message_smooch_bot_meme_check-message-demo: ''
+  custom_message_smooch_bot_window_closing_check-message-demo: ''
+  custom_message_smooch_bot_disabled_check-message-demo: ''
+  custom_message_smooch_bot_ask_for_tos_check-message-demo: ''
   custom_message_smooch_bot_ask_for_confirmation_checkpoint: താങ്കളുടെ സന്ദേശത്തിന്
     നന്ദി. ഇത് 2019ലെ ലോക് സഭാ തെരഞ്ഞെടുപ്പുമായി ബന്ധപ്പെട്ട വ്യാജവിവരമാണെന്ന് സംശയമുണ്ടോ
     ? ഉണ്ടെങ്കില്‍ 1 എന്ന് മറുപടി അയക്കകുക. ഇല്ലെങ്കില്‍ ഈ സംഭാഷണം ഇവിടെ അവസാനിപ്പിക്കാം.
@@ -208,6 +220,7 @@ ml:
     പരിശോധനക്കായുള്ള വരിയിലാണ്. "
   custom_message_smooch_bot_ask_for_tos_checkpoint: ''
   custom_message_smooch_bot_result_india-today: ''
+  custom_message_smooch_bot_result_changed_india-today: ''
   custom_message_smooch_bot_ask_for_confirmation_india-today: ''
   custom_message_smooch_bot_message_confirmed_india-today: ''
   custom_message_smooch_bot_message_type_unsupported_india-today: ''
